<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_shop_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="info.mayankag.parlorbeacon.EditShopDetails"
    tools:showIn="@layout/activity_edit_shop_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingRight="4dp"
            android:paddingEnd="4dp"
            android:text="@string/edit_shopkeeper_details" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:id="@+id/edit_shop_shopkeeperName"
            android:maxLines="1"
            android:hint="@string/edit_shopkeeper_name"/>

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_shop_email"
            android:maxLines="1"
            android:hint="@string/edit_email_id"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingRight="4dp"
            android:paddingEnd="4dp"
            android:text="@string/edit_shop_details" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:id="@+id/edit_shop_name"
            android:maxLines="1"
            android:hint="@string/edit_shop_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_shop_phone"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/edit_shop_phone_no"/>


        <EditText
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_shop_address"
            android:maxLines="1"
            android:hint="@string/edit_shop_address"/>

        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_shop_city"
            android:maxLines="1"
            android:hint="@string/edit_shop_city"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_shop_zip"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/edit_shop_zip_code"/>

        <EditText
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_shop_openTime"
            android:maxLines="1"
            android:layout_marginTop="20dp"
            android:hint="@string/edit_shop_open_time"
            android:onClick="onClickOpenTimeEdit"/>

        <EditText
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_shop_closeTime"
            android:maxLines="1"
            android:hint="@string/edit_shop_close_time"
            android:onClick="onClickCloseTimeEdit"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/edit_shop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_button_shop"
            android:text="@string/update_shop_detail_button"
            android:textColor="@color/white"
            android:onClick="onClickUpdateDetail"/>
    </LinearLayout>

</ScrollView>

