<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:text="@string/signup_shopkeeper_details" />

            <EditText
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:id="@+id/signup_shop_shopkeeperName"
                android:maxLines="1"
                android:hint="@string/signup_enter_shopkeeper_name"/>

            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_email"
                android:maxLines="1"
                android:hint="@string/signup_enter_email_id"/>

            <EditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_pass"
                android:maxLines="1"
                android:hint="@string/signup_enter_password"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:text="@string/signup_shop_details" />

            <EditText
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:id="@+id/signup_shop_name"
                android:maxLines="1"
                android:hint="@string/signup_enter_shop_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_phone"
                android:maxLines="1"
                android:inputType="phone"
                android:hint="@string/signup_enter_shop_phone_no"/>


            <EditText
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_address"
                android:maxLines="1"
                android:hint="@string/signup_enter_shop_address"/>

            <EditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_city"
                android:maxLines="1"
                android:hint="@string/signup_enter_shop_city"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_zip"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/signup_enter_shop_zip_code"/>

            <EditText
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_openTime"
                android:maxLines="1"
                android:layout_marginTop="20dp"
                android:hint="@string/signup_enter_shop_open_time" />

            <EditText
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/signup_shop_closeTime"
                android:maxLines="1"
                android:hint="@string/signup_enter_shop_close_time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/acceptTC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_the_terms_and_conditions"/>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signup_shop_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/signup_button_shop"
                android:text="@string/sign_up_shop_button"
                android:textColor="@color/white"/>
        </LinearLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>